SFUSA/force-app/main/default/objects/GBS_Flow_Document_Setting__mdt/fields/Link__c.field-meta.xml
<CustomField>
        <fullName>Link__c</fullName>
        <description>Link to document</description>
        <label>Link</label>
        <type>Url</type>
    </CustomField>