SFUSA/force-app/main/default/objects/GBS_Flow_Document_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
        <fullName>All_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>GBS_Flow_Picklist_Setting__c</columns>
        <columns>Business_Function__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </ListView>